generation of the EventPanels that are sent to the GUI is done centrally now by a factory class

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -14,6 +14,8 @@ triesRemaining= tries remaining.
 stayJail= Sorry, you must stay in jail another round
 pay=pay
 card=card
+freed=You are free from jail, and may now roll to begin you turn
+rollFailure=You failed!  Better luck next turn.
 
 #MESSAGES  FOR BUYING
 isOwned=is owned by
