--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -14,6 +14,8 @@ triesRemaining= tentatives restent
 stayJail= Desolé, tu dois rester encore un tour en prison
 pay=paie
 card=carte
+freed=Tu es libre, et peux lancer les dés pour commencer ton tour
+rollFailure=failli!  Bonne change pour la prochaine fois.
 
 #MESSAGES  FOR BUYING
 isOwned=appartient déjà à
