--- a/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
@@ -1,7 +1,12 @@
 #
 #File Name : tile_en.properties
 #
-#OTHER EVENTS
+#TEXT
+thereAre=There are
+housesOnBoard=houses on the board, and 
+hotelsOnBoard=hotels on the board.  You must pay 
+forEachHouse=for each house, and
+forEachHotel=for each hotel
 
 
 
