--- a/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
@@ -1,6 +1,11 @@
 #
 #File Name : tile_en.properties
-#
+#TEXT
+thereAre=Il y a
+housesOnBoard=maisons sur les proprietés, et
+hotelsOnBoard=hotels, tu dois payer 
+forEachHouse=pour chaque maison, et
+forEachHotel=pour chaque hotel.
 
 
 
