--- a/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
@@ -1,6 +1,10 @@
 #
 #File Name : tile_en.properties
 #
+#ERRORS
+ownAllBeforeBuild=You must first own all the properties in the color group before you can build
+
+
 #TEXT
 thereAre=There are
 housesOnBoard=houses on the board, and 
