Modified event message

--- a/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
@@ -10,7 +10,7 @@ button-bid = Bid
 button-sendoffer = Send
 button-kick = Kick Player
 button-kickvote = Send kick vote
-tab-event = Events
+tab-event = Messages
 tab-card = Card
 tab-chat = Chat
 tab-trade = Trade
