--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -10,7 +10,7 @@ button-auction = Enchère
 button-bid = Offrir
 button-sendoffer = Envoier
 button-kick = Tuer joueur
-tab-event = Événements
+tab-event = Messages
 tab-card = Carte
 tab-chat = Chat
 tab-trade = Commerce
