Resource didn't exist

--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -14,6 +14,7 @@ tab-event = Messages
 tab-card = Carte
 tab-chat = Chat
 tab-trade = Commerce
+label-jailcard = Carte prison
 label-kicktitle = Tu peut tuer un joueur en sélectionnent le nom
 label-kick = Tuer joueur
 button-kickvote = Envoier kick joueur
