--- a/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
@@ -11,7 +11,7 @@ housesOnBoard=houses on the board, and
 hotelsOnBoard=hotels on the board.  You must pay 
 forEachHouse=for each house, and
 forEachHotel=for each hotel
-
+pay=pay
 
 
 # C H A N C E   C A R D S 
