--- a/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
@@ -6,7 +6,7 @@ housesOnBoard=maisons sur les proprietés, et
 hotelsOnBoard=hotels, tu dois payer 
 forEachHouse=pour chaque maison, et
 forEachHotel=pour chaque hotel.
-
+pay=paie
 
 
 # C H A N C E   C A R D S 
