--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -7,7 +7,7 @@ rollDescription=Click Roll to move to a new tile
 youRolled= you rolled a 
 advance= advance
 spaces= spaces
-inJail= You are in Jail, you have 3 options to get out:
+inJail= You are in Jail, choose one of the three options to get out:
 outOfJail= you are out of jail!
 rollAgain=, roll again or choose another option: 
 triesRemaining= tries remaining.
