I18N for all transaction errors that are sent to the GUI

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -1,6 +1,33 @@
 #
 #File Name : tile_en.properties
 #
+#ERRORS
+ownAllBeforeBuild=You must first own all the properties in the color group before you can build
+noHousesAvailable=No houses available to complete the transaction
+noHotelsAvailable=No hotels available to complete the transaction
+maxNumberHouses=The maximum number of houses that may be built on a property is 4
+maxNumberHotels=You can't build more than one hotel on a tile.
+youDontOwnAllProp=You don't own all the properties in the group.
+notEnoughHousesAvailable=Not enough houses available to complete the transaction
+notEnoughHousesAvailable=Not enough hotels available to complete the transaction
+hotelAlreadyPresent=There is already 1 hotel on one of the properties
+mustHave4HousesForHotel=There must be 4 houses present on this property in order to build a hotel
+noHousesPresentOnTile=There are no houses present on
+noHotelsPresentOnTile=There are no hotels present on 
+atLeastOneTileNoHouse=At least one tile does not have a house to sell
+atLeastOneTileNoHotele=At least one tile does not have a hotel to sell
+inOrderToMortgage=In order to mortgage this property, all houses and hotels must first be sold to the bank
+playerDoesntOwnPropToTransfer=Cannot transfer a property from a player who doesn't own the property
+cantCompleteTransaction=Cannot complete transaction: \n\t
+notEnoughMoney=does not have enough money to perform the action
+hasntEnoughMoney-Requested= has insufficient funds. \n\tReqeusted to transfer: 
+hasntEnoughJailCards=has insufficient jail cards. \n\tReqeusted to transfer:
+accountBalance= account balance: 
+quantityAvailable=quantity available:
+doesNotOwn=does not own the property
+ownedBy= It is owned by 
+notEnoughMoneyForWithdrawal=The sum cannot be withdrawn from the player's account, because the player has insufficient funds
+					
 #MESSAGES FOR ROLLING
 roll=Roll
 rollDescription=Click Roll to move to a new tile
@@ -25,6 +52,7 @@ isNotOwned=is not currently owned, do you wish to buy it?
 youBought=Congratulations, you are the proud owner of
 payButton=pay
 buyButton=buy
+dontButButton=Don't Buy
 continueButton=continue
 
 bail=200
