--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -1,6 +1,34 @@
 #
 #File Name : tile_en.properties
 #
+
+#ERRORS
+ownAllBeforeBuild=Tu dois être le propriétaire de tous les propriétés dans le group avant que tu puisses construir des maisons ou des hotels
+noHousesAvailable=Il n'y aucune maison disponible, attende que un autre jouer vende des maisons
+noHotelsAvailable=Il n'y aucun hotel disponible, attende que un autre jouer vende des hotels
+maxNumberHouses=Le nombre maximale des maisons sur une propriété est 4
+maxNumberHotels=Le nombre maximale des hotels sur une propriété est 1
+youDontOwnAllProp=Tu ne possèdes pas tous le propriétés dans ce groupe.
+notEnoughHousesAvailable=Pas assez des maisons disponibles pour faire cette action
+notEnoughHousesAvailable=Pas assez des hotels disponibles pour faire cette action
+hotelAlreadyPresent=Il y a déjà un hotel sur cette propriété
+mustHave4HousesForHotel=Il doit y avoir déjà 4 maisons avant de construir un hotel
+noHousesPresentOnTile=Il n y aucune maison presente sur 
+noHotelsPresentOnTile=Il n y aucun hotel presente sur 
+atLeastOneTileNoHouse=Au moins un des ces propriétés n'a pas une maison à vendre
+atLeastOneTileNoHotele=Au moins un des ces propriétés n'a pas un hotel à vendre
+inOrderToMortgage=Pour que tu puisses faire un hypoteque sur cette propriété, il faut d'abord vendre tous les maisons et hotels.
+playerDoesntOwnPropToTransfer=Impossible de faire un transfer depuis un jouer qui n'est pas le propriétaire
+cantCompleteTransaction=Impossible de compléter la transaction: \n\t
+notEnoughMoney=n'a pas assez d'argent pour compléter la transaction
+hasntEnoughMoney-Requested= n'a pas assez d'argent. \n\tDemandé à transférer: 
+hasntEnoughJailCards=n'a pas assez de carte de prison. \n\tDemandé à transférer:
+accountBalance= solde: 
+quantityAvailable=quantité disponible:
+doesNotOwn=ne possède pas le propriété
+ownedBy= appartient à
+notEnoughMoneyForWithdrawal=La montant ne peut pas être retiré de le compte, parce que le jouer n'a pas assez d'argent.
+
 #MESSAGES FOR ROLLING
 roll=tirer
 rollDescription=Appuye sur Tirer pour avancer
@@ -25,6 +53,7 @@ isNotOwned=appartient encore à la banque, Souhaites-tu l'acheter?
 youBought=Felicitations, vous êtes le proprietaire de 
 payButton=payer
 buyButton=acheter
+dontButButton=Ne pas acheter
 continueButton=continuer
 
 bail=1000
