improvements to I18N added option to NOT buy a property added option Panel when property already belongs to currentPlayer

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -40,7 +40,7 @@ rollAgain=, roll again or choose another option:
 triesRemaining= tries remaining.
 stayJail= Sorry, you must stay in jail another round
 pay=pay
-card=card
+card=use card
 freed=You are free from jail, and may now roll to begin you turn
 rollFailure=You failed!  Better luck next turn.
 
@@ -54,6 +54,7 @@ payButton=pay
 buyButton=buy
 dontButButton=Don't Buy
 continueButton=continue
+ownedByYou=You own this property!  Enjoy your stay!
 
 bail=200
 startMoney =15000
@@ -228,6 +229,7 @@ tile9-coordY = 10
 tile9-rgb = 0x00FFFF
 
 jail-cardText=You are just visiting jail.
+jail-cardText2=You are in jail!
 tile10-name = Jail / Just Visiting
 tile10-price = NULL
 tile10-houseCost = NULL
@@ -260,12 +262,15 @@ tile11-coordX = 0
 tile11-coordY = 9
 tile11-rgb = 0xFF00FF
 
+utility-description=If one utility is owned rent is 4 times the amount shown on the dice.  If both utilities are owned rent is 10 times the amount shown on dice.
+utility-description1=The owner only has one utility, the rent is 4 times the amount rolled
+utility-description2=The owner has both utilities, the rent is 10 times the amount rolled
 tile12-name = Electric Company
 tile12-price = 150
 tile12-houseCost = NULL
 tile12-hotelCost = NULL
-tile12-rent = NULL
-tile12-rent1house = NULL 
+tile12-rent = 4
+tile12-rent1house = 10 
 tile12-rent2house = NULL
 tile12-rent3house = NULL
 tile12-rent4house = NULL
