--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -36,12 +36,12 @@ youRolled= tu as tiré
 advance= avance
 spaces= espaces
 inJail= Tu es en prison, il y a trois options pour sortir:
-outOfJail= Liberté!
+outOfJail= Liberté!  \nTu peux cliquer sur "tirer" pour continuer ton tour
 rollAgain=, tire de nouveau ou choisi une autre option: 
 triesRemaining= tentatives restent
 stayJail= Desolé, tu dois rester encore un tour en prison
 pay=paie
-card=carte
+card=utilise carte
 freed=Tu es libre, et peux lancer les dés pour commencer ton tour
 rollFailure=failli!  Bonne change pour la prochaine fois.
 
@@ -55,6 +55,7 @@ payButton=payer
 buyButton=acheter
 dontButButton=Ne pas acheter
 continueButton=continuer
+ownedByYou=Cette propréité t'appartient déjà!
 
 bail=1000
 startMoney =30000
@@ -229,6 +230,7 @@ tile9-coordY = 10
 tile9-rgb = 0x00FFFF
 
 jail-cardText=Vous êtes seulement en visite.
+jail-cardText2=Vous êtes en prison!
 tile10-name = Prison / En visite
 tile10-price = NULL
 tile10-houseCost = NULL
@@ -261,12 +263,15 @@ tile11-coordX = 0
 tile11-coordY = 9
 tile11-rgb = 0xFF00FF
 
+utility-description=Sur cette case, la possession de l'une des usines entraîne un loyer 40 fois plus grand le nombre jeté, la possession de deux usines entraîne un loyer 100 fois plus grand le nombre jeté
+utility-description1=le propriétaire a seulement une usine, le loyer et 40 fois plus grand le nombre jeté
+utility-description2=le propriétaire a les deux usines, le loyer et 100 fois plus grand le nombre jeté
 tile12-name = Usines Électriques
 tile12-price = 3000
 tile12-houseCost = NULL
 tile12-hotelCost = NULL
-tile12-rent = NULL
-tile12-rent1house = NULL 
+tile12-rent = 40
+tile12-rent1house = 100 
 tile12-rent2house = NULL
 tile12-rent3house = NULL
 tile12-rent4house = NULL
