Fixed problem with mortgage Display first tab in case of errors

--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -9,14 +9,14 @@ button-buy = Achter
 button-auction = Enchère
 button-bid = Offrir
 button-sendoffer = Envoier
-button-kick = Tuer joueur
+button-kick = Kick joueur
 tab-event = Messages
 tab-card = Carte
 tab-chat = Chat
 tab-trade = Commerce
 label-jailcard = Carte prison
-label-kicktitle = Tu peut tuer un joueur en sélectionnent le nom
-label-kick = Tuer joueur
+label-kicktitle = Tu peut faire un kick en sélectionnent le nom
+label-kick = Kick joueur
 button-kickvote = Envoier kick joueur
 label-youroffer = Tu offres
 label-requestfrompl = Tu veut recevoir
