buttons should all be disabled if the action conditions aren't met... there could be one or two that I missed

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -26,6 +26,9 @@ accountBalance= account balance:
 quantityAvailable=quantity available:
 doesNotOwn=does not own the property
 ownedBy= It is owned by 
+thePriceIs=Le prix se monte à
+wishToBuy=Do you wish to buy it?  The price is 
+youDontHaveEnough=you don't have enough money!  Try trading with other players.
 notEnoughMoneyForWithdrawal=The sum cannot be withdrawn from the player's account, because the player has insufficient funds
 					
 #MESSAGES FOR ROLLING
@@ -57,7 +60,7 @@ continueButton=continue
 ownedByYou=You own this property!  Enjoy your stay!
 
 bail=200
-startMoney =15000
+startMoney =4
 goMoney = 200
 
 go-cardText= Collect $200.00 as you pas GO!
