--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -27,6 +27,9 @@ accountBalance= solde:
 quantityAvailable=quantité disponible:
 doesNotOwn=ne possède pas le propriété
 ownedBy= appartient à
+thePriceIs=Le prix se monte à
+wishToBuy=Souhaites-tu l'acheter? 
+youDontHaveEnough=Tu n'as pas assez d'argent, essaie de faire un échange avec les autres jouers.
 notEnoughMoneyForWithdrawal=La montant ne peut pas être retiré de le compte, parce que le jouer n'a pas assez d'argent.
 
 #MESSAGES FOR ROLLING
@@ -58,7 +61,7 @@ continueButton=continuer
 ownedByYou=Cette propréité t'appartient déjà!
 
 bail=1000
-startMoney =30000
+startMoney =3004
 goMoney = 4000
 
 go-cardText= Prélève 4000.- de salaire en passant
