--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -47,6 +47,38 @@ card=use card
 freed=You are free from jail, and may now roll to begin you turn
 rollFailure=You failed!  Better luck next turn.
 
+#MESSAGES FOR GAME CLIENT EVENT MESSAGES TO SEND TO GUI
+boughtTheProp=bought the property
+for=for
+rolledDice=rolled the dice and got a 
+boughtHouseOn=bought a house on 
+boughtHotelOn=bought a hotel on
+boughtHouseRowOn=bought a row of houses on the group with 
+boughtHotelRowOn=bought a row of hotels on the group with
+soldHouseOn=sold a house from 
+soldHotelOn=sold a hotel from
+soldHouseRowOn=sold a row of houses on
+soldHotelRowOn=sold a row of hotels on
+changedMortgageStatus=changed the mortgage status on 
+transfered=transfered
+to=to
+jailCardsTo
+paidRentOn=paid rent on
+paidFeeOf=paid a fee of
+intoFreeParking=into free parking
+paidUtilityFeeOf=paid the utility bill to
+wentToJail=went directly to jail!!!
+gotOutOfJailByPaying=got out of jail by paying bail!
+gotOutOfJailByCard=got out of jail by using a jail card!
+gotOutOfJailByRolling=got out of jail by rolling the dice!
+received=received
+birthdayEvent=from all the players because it was his birthday
+aJailCard=a jail card!
+from=from
+freeParking=free parking!
+
+
+
 #MESSAGES  FOR BUYING
 isOwned=is owned by
 isOwnedRent=The rent for this property is
