--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -48,6 +48,37 @@ card=utilise carte
 freed=Tu es libre, et peux lancer les dés pour commencer ton tour
 rollFailure=failli!  Bonne change pour la prochaine fois.
 
+
+#MESSAGES FOR GAME CLIENT EVENT MESSAGES TO SEND TO GUI
+boughtTheProp=a acheté la propriété
+for=pour
+rolledDice=a jeté les dés
+boughtHouseOn=a acheté une maison sur 
+boughtHotelOn=a acheté un hôtel sur
+boughtHouseRowOn=a acheté un groupe de maisons sur 
+boughtHotelRowOn=a acheté un groupe de hôtels sur
+soldHouseOn=a vendu une maison sur
+soldHotelOn=a vendu un hôtel sur
+soldHouseRowOn=a vendu un groupe de maisons sur
+soldHotelRowOn=a vendu un groupe de hôtels sur
+changedMortgageStatus=a changé la hypotèque de  
+transfered=transféré
+to=à
+paidRentOn=a payé le loyer sur
+paidFeeOf=a payé un frais de
+intoFreeParking=dans parc gratuit
+paidUtilityFeeOf=a payé le frais de l'usine
+wentToJail=est allé directement en prison!!!
+gotOutOfJailByPaying=est sorti de prison en payant la caution
+gotOutOfJailByCard=est sorti de prison en utilisant une carte
+gotOutOfJailByRolling=est sorti de prison en jetant les dés
+received=a reçu
+birthdayEvent=de tous les jouers car c'est son anniversaire!
+aJailCard=une carte de prison!
+from=de
+freeParking=parc gratuit!
+
+
 #MESSAGES  FOR BUYING
 isOwned=appartient déjà à
 isOwnedRent=Le loyer pour cette proprieté se monte à
