--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -52,7 +52,7 @@ rollFailure=failli!  Bonne change pour la prochaine fois.
 #MESSAGES FOR GAME CLIENT EVENT MESSAGES TO SEND TO GUI
 boughtTheProp=a acheté la propriété
 for=pour
-rolledDice=a jeté les dés
+rolledDice=a jeté les dés et a eu 
 boughtHouseOn=a acheté une maison sur 
 boughtHotelOn=a acheté un hôtel sur
 boughtHouseRowOn=a acheté un groupe de maisons sur 
