--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -30,7 +30,8 @@ thePriceIs=Le prix se monte à
 wishToBuy=Do you wish to buy it?  The price is 
 youDontHaveEnough=you don't have enough money!  Try trading with other players.
 notEnoughMoneyForWithdrawal=The sum cannot be withdrawn from the player's account, because the player has insufficient funds
-					
+waitYourTurn=You must wait your turn before performing that action
+				
 #MESSAGES FOR ROLLING
 roll=Roll
 rollDescription=Click Roll to move to a new tile
