--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -31,6 +31,7 @@ thePriceIs=Le prix se monte à
 wishToBuy=Souhaites-tu l'acheter? 
 youDontHaveEnough=Tu n'as pas assez d'argent, essaie de faire un échange avec les autres jouers.
 notEnoughMoneyForWithdrawal=La montant ne peut pas être retiré de le compte, parce que le jouer n'a pas assez d'argent.
+waitYourTurn=Il faut attender ton tour pour effectuer cette action
 
 #MESSAGES FOR ROLLING
 roll=tirer
@@ -62,7 +63,7 @@ soldHotelOn=a vendu un hôtel sur
 soldHouseRowOn=a vendu un groupe de maisons sur
 soldHotelRowOn=a vendu un groupe de hôtels sur
 changedMortgageStatus=a changé la hypotèque de  
-transfered=transféré
+transfered=a transféré
 to=à
 paidRentOn=a payé le loyer sur
 paidFeeOf=a payé un frais de
