--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -26,8 +26,8 @@ accountBalance= account balance:
 quantityAvailable=quantity available:
 doesNotOwn=does not own the property
 ownedBy= It is owned by 
-thePriceIs=Le prix se monte à
-wishToBuy=Do you wish to buy it?  The price is 
+thePriceIs=The price is
+wishToBuy=Do you wish to buy it? 
 youDontHaveEnough=you don't have enough money!  Try trading with other players.
 notEnoughMoneyForWithdrawal=The sum cannot be withdrawn from the player's account, because the player has insufficient funds
 waitYourTurn=You must wait your turn before performing that action
