Mortgage for railroad and utitlites

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -194,7 +194,7 @@ tile5-group = railroad
 tile5-mortgageValue= 2000
 tile5-coordX = 5
 tile5-coordY = 10
-tile5-rgb = NULL
+tile5-rgb =  0xD8D8D8
 
 
 
@@ -315,7 +315,7 @@ tile12-group = utility
 tile12-mortgageValue= 1500
 tile12-coordX = 0
 tile12-coordY = 8
-tile12-rgb = NULL
+tile12-rgb = 0x8A0886
 
 tile13-name = Soleure Hauptgasse
 tile13-price = 2800
@@ -363,7 +363,7 @@ tile15-group = railroad
 tile15-mortgageValue= 2000
 tile15-coordX = 0
 tile15-coordY = 5
-tile15-rgb = NULL
+tile15-rgb =  0xD8D8D8
 
 
 tile16-name = Bienne Rue de Nidau
@@ -533,7 +533,7 @@ tile25-group = railroad
 tile25-mortgageValue= 2000
 tile25-coordX = 5
 tile25-coordY = 0
-tile25-rgb = NULL
+tile25-rgb =  0xD8D8D8
 
 tile26-name = Lucerne Weggisgasse
 tile26-price = 5200
@@ -583,7 +583,7 @@ tile28-group = utility
 tile28-mortgageValue= 1500
 tile28-coordX = 8
 tile28-coordY = 0
-tile28-rgb = NULL
+tile28-rgb = 0x8A0886
 
 
 tile29-name = Lausanne Rue de Bourg
@@ -700,7 +700,7 @@ tile35-group = railroad
 tile35-mortgageValue= 2000
 tile35-coordX = 10
 tile35-coordY = 5
-tile35-rgb = NULL
+tile35-rgb =  0xD8D8D8
 
 
 tile36-name = Chance
