roll 3 doubles and you go to jail rolling doubles to begin turn gives you an extra roll when events are completed

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -34,14 +34,17 @@ notEnoughMoneyForWithdrawal=La montant ne peut pas être retiré de le compte, par
 waitYourTurn=Il faut attender ton tour pour effectuer cette action
 
 #MESSAGES FOR ROLLING
-roll=tirer
-rollDescription=Appuye sur Tirer pour avancer
+roll=jete
+rollAgainDoubles=Tu as jeté doubles!  Clique sur jete pour jeter de nouveau!
+rollDescription=Appuye sur jete pour avancer
+tooManyDoubles=Tu a jeté doubles 3 fois!  Vas directement en prison!
 youRolled= tu as tiré 
 advance= avance
 spaces= espaces
 inJail= Tu es en prison, il y a trois options pour sortir:
-outOfJail= Liberté!  \nTu peux cliquer sur "tirer" pour continuer ton tour
-rollAgain=, tire de nouveau ou choisi une autre option: 
+wentToJailArrivalMessage=Sois le bienvenue en prison!
+outOfJail= Liberté!  \nTu peux cliquer sur «jete» pour continuer ton tour
+rollAgain=, jete de nouveau ou choisi une autre option: 
 triesRemaining= tentatives restent
 stayJail= Desolé, tu dois rester encore un tour en prison
 pay=paie
@@ -51,6 +54,7 @@ rollFailure=failli!  Bonne change pour la prochaine fois.
 
 
 #MESSAGES FOR GAME CLIENT EVENT MESSAGES TO SEND TO GUI
+thanks=merci!
 boughtTheProp=a acheté la propriété
 for=pour
 rolledDice=a jeté les dés et a eu 
