--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -34,11 +34,14 @@ waitYourTurn=You must wait your turn before performing that action
 				
 #MESSAGES FOR ROLLING
 roll=Roll
+rollAgainDoubles=you rolled doubles and can now roll again!
 rollDescription=Click Roll to move to a new tile
+tooManyDoubles="You rolled doubles 3 times!  GO TO JAIL!
 youRolled= you rolled a 
 advance= advance
 spaces= spaces
 inJail= You are in Jail, choose one of the three options to get out:
+wentToJailArrivalMessage=Welcome to jail!   
 outOfJail= you are out of jail!
 rollAgain=, roll again or choose another option: 
 triesRemaining= tries remaining.
@@ -49,6 +52,7 @@ freed=You are free from jail, and may now roll to begin you turn
 rollFailure=You failed!  Better luck next turn.
 
 #MESSAGES FOR GAME CLIENT EVENT MESSAGES TO SEND TO GUI
+thanks=thanks
 boughtTheProp=bought the property
 for=for
 rolledDice=rolled the dice and got a 
