fixed error with doubles to get out of jail

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -38,7 +38,7 @@ roll=jete
 rollAgainDoubles=Tu as jeté doubles!  Clique sur jete pour jeter de nouveau!
 rollDescription=Appuye sur jete pour avancer
 tooManyDoubles=Tu a jeté doubles 3 fois!  Vas directement en prison!
-youRolled= tu as tiré 
+youRolled= tu as jeté 
 advance= avance
 spaces= espaces
 inJail= Tu es en prison, il y a trois options pour sortir:
