no rent if mortgaged

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -81,7 +81,7 @@ birthdayEvent=from all the players because it was his birthday
 aJailCard=a jail card!
 from=from
 freeParking=free parking!
-
+isMortgaged=this property is mortgaged!
 
 
 #MESSAGES  FOR BUYING
