--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -82,7 +82,7 @@ birthdayEvent=de tous les jouers car c'est son anniversaire!
 aJailCard=une carte de prison!
 from=de
 freeParking=parc gratuit!
-
+isMortgaged=cette propriété est hypothéqué
 
 #MESSAGES  FOR BUYING
 isOwned=appartient déjà à
