--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -29,7 +29,7 @@ label-sellhouserow = Vendre une ligne des maisons
 label-sellhotel = Vendre un hotel
 label-sellhotelrow = Vendre une ligne des hotel
 label-mortgage = Hypothèque
-label-unmortgage = Découvrire
+label-unmortgage = Déshypothéquer
 label-price = Prix: 
 label-rent = Louer: 
 label-onehouse = Avec 1 maison: 
