developping kick player

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -82,7 +82,9 @@ aJailCard=a jail card!
 from=from
 freeParking=free parking!
 isMortgaged=this property is mortgaged!
-
+kickOutInitiated=initiated a vote to kick out
+votedYes=voted in favor of kicking
+votedNo=voted against kicking
 
 #MESSAGES  FOR BUYING
 isOwned=is owned by
