--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -83,6 +83,9 @@ aJailCard=une carte de prison!
 from=de
 freeParking=parc gratuit!
 isMortgaged=cette propriété est hypothéqué
+kickOutInitiated=a crée un vote pour jeter dehors 
+votedYes=a voté pour jeter dehors
+votedNo=a voté pour ne pas jeter dehors
 
 #MESSAGES  FOR BUYING
 isOwned=appartient déjà à
