message should arrive at GUI even if player doesn't succeed at rolling to get out of jail

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -76,6 +76,7 @@ wentToJail=went directly to jail!!!
 gotOutOfJailByPaying=got out of jail by paying bail!
 gotOutOfJailByCard=got out of jail by using a jail card!
 gotOutOfJailByRolling=got out of jail by rolling the dice!
+getOutOfJailFailure=tried 3 times to get out of jail by rolling the dice, and FAILED!!
 received=received
 birthdayEvent=from all the players because it was his birthday
 aJailCard=a jail card!
