--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -77,6 +77,7 @@ wentToJail=est allé directement en prison!!!
 gotOutOfJailByPaying=est sorti de prison en payant la caution
 gotOutOfJailByCard=est sorti de prison en utilisant une carte
 gotOutOfJailByRolling=est sorti de prison en jetant les dés
+getOutOfJailFailure=a essayé 3 fois de sortir de prison en jetant les dés, mais n'a pas reussi!
 received=a reçu
 birthdayEvent=de tous les jouers car c'est son anniversaire!
 aJailCard=une carte de prison!
