--- a/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
@@ -49,6 +49,7 @@ label-tradeans = Trade answer
 label-tradeaccepted = The trade has been accepted
 label-traderefused = The trade has benn refused
 label-tradearrived = Trade request
+labe-kickrequest = Kick Request
 
 
 label-tradereceived = You received a trade request from 
