--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -49,6 +49,7 @@ label-tradearrived = Requet de commerce
 label-tradeans = Reponse de commerce
 label-tradeaccepted = Le commerce a été accepté
 label-traderefused = Le commerce a été refusé
+label-kickrequest = Requete de kick
 
 label-tradereceived = Tu as reçu une requet de commerce de
 label-offercontent = Offer 
