when player leaves, his assets are divided amonst the other players... except of course if the player who runs the server leaves

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -67,7 +67,7 @@ soldHotelRowOn=sold a row of hotels on
 changedMortgageStatus=changed the mortgage status on 
 transfered=transfered
 to=to
-jailCardsTo
+jailCards=jail cards
 paidRentOn=paid rent on
 paidFeeOf=paid a fee of
 intoFreeParking=into free parking
