--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -69,6 +69,7 @@ soldHotelRowOn=a vendu un groupe de hôtels sur
 changedMortgageStatus=a changé la hypotèque de  
 transfered=a transféré
 to=à
+jailCards=cartes de jail
 paidRentOn=a payé le loyer sur
 paidFeeOf=a payé un frais de
 intoFreeParking=dans parc gratuit
