tabs have names of their event some reorganizing

--- a/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
@@ -61,6 +61,7 @@ jdialog-tradeErrorParameter = Please check the parameters of your offer.
 button-accept = Accept
 button-refuse = Refuse
 
+roll= Roll
 
 
 text-throwindice = I'm throwing the dice...
