--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -60,6 +60,9 @@ jdialog-tradeErrorParameter = SVP contrôler les paramétrés inséré
 button-accept = Accept
 button-refuse = Refuse
 
+
+roll= jeter
+
 text-throwindice = Je jette les des...
 text-diceresult = La valeur de ton jet est 
 text-quitgame = Est tu vraiement sûre de terminer le jeux?
