--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -84,6 +84,7 @@ from=from
 freeParking=free parking!
 isMortgaged=this property is mortgaged!
 kickOutInitiate=initiated a vote to kick out
+wasKicked=was kicked out of the game
 votedYes=voted in favor of kicking
 votedNo=voted against kicking
 
