where was my putain corrections?

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -86,6 +86,7 @@ from=de
 freeParking=parc gratuit!
 isMortgaged=cette propriété est hypothéqué
 kickOutInitiate=a crée un vote pour jeter dehors 
+wasKicked=a été jeté dehors du jeu
 votedYes=a voté pour jeter dehors
 votedNo=a voté pour ne pas jeter dehors
 
