--- a/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
@@ -60,7 +60,7 @@ chance9-cardText=Sort immédiatement de prison sans payer d'amende. On garde cett
 
 #GET FIXED SUM CARDS
 chance10-name=état d'ébriété
-chance10-cardText=Amende pour avoir été en état d'ébriété 
+chance10-cardText=Amende pour avoir été en état d'ébriété , paie 400
 chance10-fixedSum=-400
 
 chance11-name=Remboursement d'un emprunt
