--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -87,6 +87,7 @@ kickOutInitiate=initiated a vote to kick out
 wasKicked=was kicked out of the game
 votedYes=voted in favor of kicking
 votedNo=voted against kicking
+passedGo=passed go and collected $400
 
 #MESSAGES  FOR BUYING
 isOwned=is owned by
