--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -89,7 +89,7 @@ kickOutInitiate=a crée un vote pour jeter dehors
 wasKicked=a été jeté dehors du jeu
 votedYes=a voté pour jeter dehors
 votedNo=a voté pour ne pas jeter dehors
-
+passedGo=est passé par Start et a prélèvé 4000.-
 #MESSAGES  FOR BUYING
 isOwned=appartient déjà à
 isOwnedRent=Le loyer pour cette proprieté se monte à
