--- a/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
@@ -104,7 +104,7 @@ commchest2-newPosition = -1
 
 #CASH TRANSFER CARDS
 commchest3-name=Joyeux anniversaire! 
-commchest3-cardText=Tu as tun anniversaire et chaque jouer t'offre Fr. 200.-
+commchest3-cardText=C'est ton anniversaire et chaque jouer t'offre Fr. 200.-
 commchest3-fixedSum=200
 
 #GET JAIL-FREE CARD 
@@ -145,7 +145,7 @@ commchest12-cardText=Paie une police d'assurance de Fr. 1 000.-
 commchest12-fixedSum=-1000
 
 commchest13-name=héritage
-commchest13-cardText=Grâce à un héritage, tu touches Fr. 2 000.-
+commchest13-cardText=Grâce à un héritage, tu touches Fr. 2 000.- 
 commchest13-fixedSum=2000
 
 commchest14-name=Frais d'hôpital
