--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -343,7 +343,7 @@ tile13-coordX = 0
 tile13-coordY = 7
 tile13-rgb = 0xFF00FF
 
-tile14-name = Lugana Via Nassa
+tile14-name = Lugano Via Nassa
 tile14-price = 3200
 tile14-houseCost = 1000
 tile14-hotelCost = 1000
