endless roll fixed

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -172,7 +172,7 @@ tile3-coordY = 10
 tile3-rgb = 0xDCD0FF
 
 #TERRAIN
-incomeTax-cardText="Pay income tax.  You may pay either 10% of your money, or a flat rate of $200"
+incomeTax-cardText=Pay income tax.  You may pay either 10% of your money, or a flat rate of $200
 tile4-name = Income Tax
 tile4-price = NULL
 tile4-houseCost = NULL
